<resources>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="de"> "de"</string>
    <string name="registros"> registros</string>
    <string name="version"> versión</string>
    <string name="lbl_esferas">esferas</string>
    <string name="m_str_lecturas">Órdenes</string>
    <string name="m_str_importar">Importar</string>
    <string name="m_str_exportar">Exportar Fotos</string>
    <string name="aceptar">Aceptar</string>
    <string name="continuar">Continuar</string>
    <string name="reintentar">Reintentar</string>
    <string name="Salir">Salir</string>
    <string name="eliminar">Eliminar</string>
    <string name="borrar">Borrar</string>
    <string name="msj_error">"Ocurrio un error %s."</string>
    <string name="msj_error_descripcion">"Ocurrio un error %s. Mensaje de error:"</string>
    <string name="cancelar">Cancelar</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="guardar">Finalizar</string>
    <string name="capturar">Capturar</string>
    <string name="str_lectura">EFECTIVA</string>
    <string name="str_presion">Presión</string>
    <string name="str_lectura_verifique">VERIFIQUE Lectura:</string>
    <string name="str_presion_verifique">VERIFIQUE Presión:</string>
    <string name="str_fotos">Fotos</string>
    <string name="str_videos">Videos</string>
    <string name="title_activity_toma_de_lecturas">Ejecución de Órdenes</string>
    <string name="str_modoCorreccion">(MODO DE CORRECCIÓN) Lectura:</string>
    <string name="str_comentarios">Comentar</string>
    <string name="str_problemas">Problemas:</string>
    <string name="m_str_comentarios">Comentarios</string>
    <string name="msj_warning_importar">Se remplazaran los datos en memoria con los datos en el servidor, ¿Desea continuar?</string>
    <string name="msj_lotecargar">Escriba el nombre del archivo a cargar.</string>
    <string name="str_emptyField">El nombre del archivo no puede estar vacío.</string>
    <string name="m_str_correccion">Corrección</string>
    <string name="m_str_siguiente">Sig.</string>
    <string name="m_str_anterior">Ant.</string>
    <string name="m_str_exportarTodo">Exportar Todo</string>
    <string name="str_caseta">Caseta</string>
    <string name="str_intcial">Cial</string>
    <string name="str_min">Min</string>
    <string name="str_max">Max</string>
    <string name="str_lecturaAnterior">Ord. Ant</string>
    <string name="str_lect">Orden</string>
    <string name="str_modo">Modo</string>
    <string name="str_ciudad">Ciudad</string>
    <string name="str_cliente">Cliente</string>
    <string name="str_direccion">Direccion</string>
    <string name="msj_str_brincarComentarios">Brincar orden con comentarios</string>
    <string name="title_activity_filtrado">Filtrado</string>
    <string name="capturayanomalia">Captura y Anomalia</string>
    <string name="capturayregresa">Captura y Regresa</string>
    <string name="capturaysiguiente">Captura y Siguiente</string>
    <string name="str_exportar_lowercase">exportar</string>
    <string name="str_importar_lowercase">importar</string>
    <string name="info_centro">Unicom</string>
    <string name="info_lote">Lote</string>
    <string name="info_CPL">CPL</string>
    <string name="info_Pais">Pais</string>
    <string name="info_numBluetooth">Número de Bluetooth</string>
    <string name="info_macBluetooth">MAC Bluetooth</string>
    <string name="info_macImpresora">MAC Impresora</string>
    <string name="info_servidorGPRS">Servidor GPRS</string>
    <string name="info_tamanoFoto">Tamaño de la Foto</string>
    <string name="info_rutaDescarga">Ruta de Descarga</string>
    <string name="info_modo">Modo</string>
    <string name="info_modo_normal">Normal</string>
    <string name="info_modo_sin_fotos">Sin Fotos</string>
    <string name="info_modo_fotos">Fotos</string>
    <string name="info_modo_fotos_cc">Fotos CC</string>
    <string name="info_calidad_foto">Calidad de la Foto</string>
    <string name="info_sonidos">Sonido</string>
    <string name="info_encendido">Encendido</string>
    <string name="info_apagado">Apagado</string>
    <string name="str_medidor">Medidor</string>
    <string name="str_titulo2">Desarrollado para</string>
    <string name="str_titulo">SOGES</string>
    <string name="str_nosotros">por</string>
    <string name="lbl_lecturista">Técnico</string>
    <string name="lbl_admon">Supervisor</string>
    <string name="lbl_cambiarUsuario">Cambiar Usuario</string>
    <string name="str_login_msj_admon">\nColoque su usuario y contraseña\n</string>
    <string name="str_login_msj_lecturista">\nEscriba el usuario y la contraseña, despues presione \'Entrar\' para continuar</string>
    <string name="str_login_msj_lecturista_contrasena">\nEscriba la contraseña, despues presione \'Entrar\' para continuar</string>
    <string name="str_login_msj_lecturista_contrasena_arg">\nEscriba el PTN asingado, despues presione \'Entrar\' para continuar</string>
    <string name="str_usuario">Usuario:</string>
    <string name="str_contrasena">Contraseña:</string>
    <string name="lbl_entrar">Entrar</string>
    <string name="str_mostrar_ubicacion_gps">Ubicación medidor (GPS)</string>
    <string name="str_ver_mapa_de_todos">Mapa de la Ruta</string>
    <string-array name="Modo">
        <item>Normal</item>
        <item>Corrección</item>
    </string-array>
    <string name="m_str_filtrar">Filtrar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="m_str_salirCorreccion">Salir de Correccion</string>
    <string name="str_captura">Captura</string>
    <string name="str_captura_video">Iniciar Grabación</string>
    <string name="str_servidor">Servidor</string>
    <string name="lbl_medidor">Medidor</string>
    <string name="lbl_ic">IC</string>
    <string name="str_lbl_medidor">Medidor</string>
    <string name="str_marca">Marca</string>
    <string name="str_nis">NIS</string>
    <string name="str_anomalia">NO EFECTIVA</string>
    <string name="str_subanomalia">Subanomalia</string>
    <string name="str_buscar">Buscar</string>
    <string name="str_buscar_lowercase">buscar</string>
    <string name="str_edo">Edo</string>
    <string name="title_activity_buscar_medidor">Buscar</string>
    <string name="msj_buscar">Escriba los ultimos digitos del medidor</string>
    <string name="msj_buscar_direccion">Escriba parte de la dirección</string>
    <string name="msj_buscar_numero">Escriba el IC</string>
    <string name="lbl_regresar">Continuar</string>
    <string name="lbl_seleccionar">Selecc.</string>
    <string name="m_str_borrarAnom">Borrar Anomalia</string>
    <string name="m_str_desendente">Desendente</string>
    <string name="m_str_ascendente">Ascendente</string>
    <string name="title_activity_configuracion">Configuracion</string>
    <string name="msj_warning_pendientes">Hay lecturas pendientes. Confirme que desea hacer un cierre forzado.</string>
    <string name="msj_warning_pendientes_continuar">Hay lecturas pendientes.¿Desea Continuar?</string>
    <string name="str_configuracion">Configuración</string>
    <string name="str_m_borrar_lect">Borrar Lectura</string>
    <string name="title_activity_no_registrados">Nuevo Medidor</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="msj_tiene_medidor">¿Tiene Medidor?</string>
    <string name="m_str_noregistrados">Nuevo Medidor</string>
    <string name="m_strCambiarFuente">Cambiar Fuente</string>
    <string name="m_str_borrarRuta">Borrar Ruta</string>
    <string name="str_warning_borrarRuta">Se borrarán todas las órdenes cargadas ¿Desea Continuar?</string>
    <string name="m_str_ingresarMAC">Ingreso Facil de MAC</string>
    <string name="m_str_desHabilita_imp">Deshabilita Impresion</string>
    <string name="m_str_habilita_Impresion">Habilita Impresion</string>
    <string name="msj_imprimir">Se imprimiran los comprobantes de lecturas</string>
    <string name="m_str_ingresarMACIMPR">Ingreso Facil de MAC Impresora</string>
    <string name="m_str_acercade">Acerca de</string>
    <string name="m_str_sinLectura">Sin Ejecutar</string>
    <string name="m_str_conLectura">Ejecutadas</string>
    <string name="m_str_todo">Todas las Órdenes</string>
    <string name="m_str_gpsOn">GPS Encendido</string>
    <string name="m_str_gpsOff">GPS Apagado</string>
    <string name="str_espere">Espere&#8230;</string>
    <string name="lbl_direccion">Dirección</string>
    <string name="lbl_calles">Calles</string>
    <string name="lbl_numero">Número</string>
    <string name="lbl_principal">Principal</string>
    <string name="lbl_resumen">Resumen</string>
    <string name="lbl_recientes">Recientes</string>
    <string name="lbl_mas_usadas">Más usadas</string>
    <string name="lbl_todas">Catálogo de Anomalías</string>
    <string name="lbl_informacion">"Cambiar Font Superior"</string>
    <string name="lbl_area_de_captura">"Cambiar Font Inferior" </string>
    <string name="msj_main_ruta_borrada">La ruta a sido borrada</string>
    <string name="msj_buscar_no_medidores">No hay órdenes que contengan este número de serie</string>
    <string name="msj_buscar_no_medidores_direccion">No hay órdenes con esta dirección</string>
    <string name="msj_buscar_no_medidores_numero">No hay órdenes con IC</string>
    <string name="msj_buscar_no_medidores_calles">No hay órdenes con esta calle</string>
    <string name="msj_buscar_cant_med_encontrados">Se encontraron %d órdenes</string>
    <string name="msj_buscar_cant_calles_encontrados">Se encontraron %d calle(s)</string>
    <string name="msj_campo_vacio">El campo %s no puede estar vacio</string>
    <string name="msj_campo_vacio_no_persnalizable">El campo no puede estar vacio</string>
    <string name="msj_fotos_cantidad_a_tomar">Se requieren %d foto(s)</string>
    <string name="msj_fotos">foto(s)</string>
    <string name="msj_camara_obtener">"obtener la camara"</string>
    <string name="msj_camara_volverATomar">"Volver a Tomar"</string>
    <string name="lbl_camara_otra">Otra Foto</string>
    <string name="lbl_configuracion_modo_trans">Modo de transmisión de los Videos</string>
    <string name="lbl_configuracion_modo_WIFI">Solo por WiFi</string>
    <string name="lbl_configuracion_modo_GPRS">Por WiFi y por Datos</string>
    <string name="lbl_configuracion_modo_BT">Bluetooth</string>
    <string name="lbl_configuracion_modo_USB">USB</string>
    <string name="lbl_configuracion_modo_preguntar">Preguntar Siempre</string>
    <string name="msj_cpl_verifique_contrasena">"Verifique la contraseña. "</string>
    <string name="msj_cpl_verifique_usuario_contrasena">"Verifique la usuario y la contraseña. "</string>
    <string name="msj_validacion_esferas">El número de esferas no coincide.</string>
    <string name="msj_validacion_no_hay_lectura">No se ha ejecutado una orden</string>
    <string name="msj_validacion_long_mac">"La MAC ingresada no es valida, verifique que sea de 12 digitos"</string>
    <string name="msj_lecturas_no_hay_mas">"No hay más órdenes"</string>
    <string name="msj_lecturas_no_hay_ingresadas">"No hay órdenes ingresadas"</string>
    <string name="msj_lecturas_no_hay_lecturas_cargadas">"No hay órdenes cargadas"</string>
    <string name="msj_lecturas_verifique">"Verifique la lectura"</string>
    <string name="msj_lecturas_verifique_1">"Verifique los datos del medidor"</string>
    <string name="msj_main_select_metodo_trans">"Seleccione un método de transmisión"</string>
    <string name="msj_main_operacion_cancelada">"La operación ha sido cancelada."</string>
    <string name="str_lbl_emergencia">Emergencia</string>
    <string name="str_ajustar_fuente_informacion">"Cambiar Font Superior"</string>
    <string name="str_ajustar_fuente_areaCaptura">"Cambiar Font Inferior"</string>
    <string name="str_nivel_bateria">Nivel de batería: </string>
    <string name="m_str_exportar_videos">Exportar Videos</string>
</resources>