<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/m_importar"
        android:icon="@drawable/ic_action_importar"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/m_str_importar"
        android:visible="false"/>

    <item
        android:id="@+id/m_exportar"
        android:icon="@drawable/ic_action_exportar"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/m_str_exportar"
        android:visible="true"></item>

    <item
        android:id="@+id/m_exportarVideos"
        android:icon="@drawable/ic_action_exportar"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/m_str_exportar_videos"
        android:visible="true"></item>

    <item
        android:id="@+id/m_lecturas"
        android:icon="@drawable/ic_lecturas"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/m_str_lecturas"
        android:visible="false"></item>

    <item
        android:id="@+id/m_filtrar"
        android:orderInCategory="3"
        android:title="@string/m_str_filtrar"
        android:visible="false"></item>

    <item
        android:id="@+id/m_exportarTodo"
        android:title="@string/m_str_exportarTodo"
        android:showAsAction="never"
        android:visible="false"></item>

    <item
        android:id="@+id/m_borrarruta"
        android:orderInCategory="5"
        android:title="@string/m_str_borrarRuta"
        android:visible="true"></item>

    <item
        android:id="@+id/m_probarCamara"
        android:orderInCategory="7"
        android:title="Probar cámara"
        android:visible="false" />

    <item
        android:id="@+id/m_probarVideo"
        android:orderInCategory="8"
        android:title="Probar video"
        android:visible="false" />

    <item
        android:id="@+id/probar_bt"
        android:title="Probar bt"
        android:visible="false"/>

    <item
        android:id="@+id/m_acercaDe"
        android:title="@string/m_str_acercade"
        android:visible="false"/>
    <item
        android:id="@+id/m_verTamanosLetra"
        android:title="Tamaños de Fuente"/>
    <item
        android:id="@+id/m_grabarEnSD"
        android:title="Grabar en SDCard"/>
    <item
        android:id="@+id/m_cierreForzado"
        android:title="Cierre Forzado"
        android:visible="true"/>
    <item
        android:id="@+id/m_VerMapaDeTodos"
        android:icon="@drawable/puntogps"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/str_ver_mapa_de_todos"/>
    <item
        android:id="@+id/m_configuracion"
        android:icon="@drawable/ic_action_configuracion"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/str_configuracion"
        android:visible="true"></item>

    <item
        android:id="@+id/m_cambiarUsuario"
        android:icon="@drawable/ic_action_cambiausr"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/lbl_cambiarUsuario"
        android:visible="false"/>

    <item
        android:id="@+id/m_cerrarSesion"
        android:orderInCategory="40"
        android:showAsAction="never"
        android:title="Cerrar sesión"
        android:visible="true" />

    <item
        android:id="@+id/m_salir"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/Salir"/>

</menu>