<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  >

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
    </androidx.viewpager.widget.ViewPager>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_alignParentLeft="true" >

      <Button
            android:id="@+id/btnCapturar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3333"
            android:fontFamily="@font/lato"
            android:text="@string/msj_camara_volverATomar" />

        <Button
            android:id="@+id/camara_b_otra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3333"
            android:fontFamily="@font/lato"
            android:text="@string/lbl_camara_otra" />

	    <Button
	        android:id="@+id/camara_b_regresa"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight=".3333"
            android:fontFamily="@font/lato"
	        android:text="@string/lbl_regresar"
	        android:visibility="visible" />
  </LinearLayout>

  <TextView
      android:id="@+id/tv_infofotos"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:layout_alignParentTop="true"
      android:layout_weight=".3333"
      android:background="@color/Gray"
      android:text="Medium Text"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:textColor="@color/White" />

</RelativeLayout>